:wrench: [Hardware] fix add to cart spacing for iPhone SE

--- a/src/styles/hardware.scss
+++ b/src/styles/hardware.scss
@@ -157,6 +157,10 @@
                         color: white;
                     }
 
+                    @media (max-width: 375px) {
+                        padding: 12px 18px;
+                    }
+
                 }
             }
 
